@@ -2,6 +2,7 @@
 # -*- coding: utf-8 -*-
 
 import requests
+import grequests
 from bot import Curses_ui_bot
 import ui
 import sys
@@ -156,11 +157,8 @@ class Client:
         #    for line in response.text:
         #        line = line.strip(chr(0)).strip()
         #        if len(line) > 0:
-        #            self.states.append(ast.literal_eval(line))
-        #            try:
-        #                print self.states[len(self.states)-1], type(self.states[len(self.states)-1])
-        #            except:
-        #                pass
+        #            self.states.append(ast.literal_eval(line)) <<< Here is the problem
+        #           
         self.gui.quit_ui()
         os.system('cls' if os.name == 'nt' else 'clear')
         print "********************************************************"
@@ -243,6 +241,13 @@ class Client:
             # start a new game
             if self.bot.running:
                 self.start_game()
+                gold = 0
+                winner = ""
+                for player in self.bot.game.heroes:
+                    if int(player.gold) > gold:
+                        winner = player.name
+                        gold = int(player.gold)
+                self.pprint("**** " + winner + " wins. ****")
                 self.pprint("Game finished: "+str(i+1)+"/"+str(self.config.number_of_games))
 
     def replay(self):
@@ -253,6 +258,14 @@ class Client:
             # start a new game
             if self.bot.running:
                 self.restart_game()
+                gold = 0
+                winner = ""
+                for player in self.bot.game.heroes:
+                    if int(player.gold) > gold:
+                        winner = player.name
+                        gold = int(player.gold)
+                self.pprint("**** " + winner + " wins. ****")
+                self.pprint("Game finished: "+str(i+1)+"/"+str(self.config.number_of_games))
                 self.pprint("Game finished.")
 
     def start_game(self):
@@ -411,8 +424,6 @@ class Client:
         if not self.gui.paused:
             # Draw the map
             self.gui.draw_map(self.bot.game.board_map, self.bot.path_to_goal, self.bot.game.heroes)
-            # Print informations about other players
-            self.gui.display_heroes(self.bot.game.heroes, self.bot.game.hero.user_id)
             # Use the following methods to display datas
             # within the interface
             self.gui.display_url(self.bot.game.url)
@@ -437,6 +448,8 @@ class Client:
             self.gui.display_last_nearest_mine(self.bot.last_nearest_mine_pos)
             self.gui.display_last_nearest_hero(self.bot.last_nearest_enemy_pos)
             self.gui.display_last_nearest_tavern(self.bot.last_nearest_tavern_pos)
+            # Print informations about other players
+            self.gui.display_heroes(self.bot.game.heroes, self.bot.game.hero.user_id)
             # Print a *list of tuples* representing what you think can be usefull
             # i.e an heuristic result
             self.gui.display_decision(self.bot.decision)
