@@ -351,6 +351,12 @@ class tui:
 
     def display_heroes(self, heroes, bot_id):
         x = 12
+        gold_winner = ""
+        max_gold = 0
+        gold_pos = 0
+        mine_winner = ""
+        max_mine = 0
+        mine_pos = 0
         for hero in heroes:
             if hero.user_id != bot_id:
                 for i in range(1, 21, 2):
@@ -374,7 +380,23 @@ class tui:
                 self.players_win.addstr(15, x, str(hero.gold))
                 self.players_win.addstr(17, x, str(hero.spawn_pos))
                 self.players_win.addstr(19, x, str(hero.crashed))
+                if int(hero.gold) > max_gold:
+                    max_gold = int(hero.gold)
+                    gold_winner =  str(hero.bot_id)
+                    gold_pos = x
+                if int(hero.mine_count) > max_mine:
+                    max_mine = int(hero.mine_count)
+                    mine_winner =  str(hero.bot_id)
+                    mine_pos = x
                 x += 18
+        if gold_winner == bot_id:
+            self.data_win.addstr(17, 21, "$", curses.A_BOLD + curses.color_pair(4))
+        else:
+            self.players_win.addstr(15, gold_pos + 16, "$", curses.A_BOLD + curses.color_pair(4))
+        if mine_winner == bot_id:
+            self.data_win.addstr(15, 21, "*", curses.A_BOLD + curses.color_pair(4))
+        else:
+            self.players_win.addstr(13, mine_pos + 16, "*", curses.A_BOLD + curses.color_pair(4))
 
     def display_url(self, url):
         url = url[url.rfind("/")+1:]
